--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -412,14 +412,17 @@ h4 {
     /* @media only screen and (max-width: 650px) { */
     .navbar {
         .divLupa-mobileFirs {
-            display: block;
+            display: flex;
             width: 30%;
+            justify-content: end;
         }
 
         .nabvar-hamburguesa {
             width: auto;
             margin-left: -4%;
             height: 4rem;
+            margin-right: 28px;
+            margin-top: 12px;
         }
 
         .navbar-contenedor-logo {
