--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -299,11 +299,12 @@ h4 {
             .card-game {
                 position: relative;
                 margin-left: 4px;
+                margin: 5px;
 
                 .card-img-game {
                     cursor: pointer;
                     width: 400px;
-                    height: 230px;
+                    height: 220px;
                     object-fit: cover;
                     border-radius: 8px;
                 }
@@ -337,7 +338,7 @@ h4 {
 
                 :is(.a, .b, .c, .d)::before {
                     content: "Jugar gratis";
-                    width: 75%;
+                    width: 70%;
                     text-align: center;
                     color: white;
                     position: absolute;
@@ -505,8 +506,8 @@ h4 {
         color: var(--white);
         font-size: 22px;
         margin-bottom: 10px;
-        margin-left: 77px;
-        margin-right: 33px;
+        margin-left: 80px;
+        margin-right: 30px;
     }
 
     .inputs {
