--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -372,15 +372,18 @@ h4 {
 
                 .card-game-arrowL {
                     transform: rotate(540deg);
-                    margin-top: 16px;
+                    margin-top: 10px;
                 }
             }
 
-            .arrowLeft,
+            .arrowLeft{
+                position: absolute;
+                margin-top: 0px;
+                cursor: pointer;
+            }
             .arrowRigth {
                 position: absolute;
-                bottom: 0;
-                top: 0;
+                margin-top: 7px;
                 cursor: pointer;
             }
 
@@ -392,10 +395,6 @@ h4 {
                 right: 2%;
             }
 
-            .arrowLeft:active,
-            .arrowRigth:active {
-                background-color: rgba(128, 128, 128, 0.295);
-            }
 
             .arrowLeft:hover,
             .arrowRigth:hover {
@@ -732,6 +731,113 @@ h4 {
         margin-left: 290px;
         margin-bottom: 60px;
     }
+
+    .btn-conteiner {
+        display: flex;
+        justify-content: center;
+        --color-text: #9ee5fa;
+        --color-background: #353535;
+        --color-outline: #9ee5fa80;
+        --color-shadow: #00000080;
+    }
+    
+    .btn-content {
+        display: flex;
+        align-items: center;
+        padding: 0px 3px;
+        text-decoration: none;
+        font-family: "Poppins", sans-serif;
+        font-size: 25px;
+        color: var(--color-text);
+        background: var(--color-background);
+        transition: 1s;
+        border-radius: 100px;
+        box-shadow: 0 0 0.2em 0 var(--color-background);
+    }
+    
+    .btn-content:hover,
+    .btn-content:focus {
+        transition: 0.5s;
+        -webkit-animation: btn-content 1s;
+        animation: btn-content 1s;
+        outline: 0.1em solid transparent;
+        outline-offset: 0.2em;
+        box-shadow: 0 0 0.4em 0 var(--color-background);
+    }
+    
+    .btn-content .icon-arrow {
+        transition: 0.5s;
+        margin-right: 0px;
+        transform: scale(0.6);
+    }
+    
+    .btn-content:hover .icon-arrow {
+        transition: 0.5s;
+        margin-right: 25px;
+    }
+    
+    .icon-arrow {
+        width: 20px;
+        margin-left: 15px;
+        position: relative;
+        top: 6%;
+    }
+    
+    /* SVG */
+    #arrow-icon-one {
+        transition: 0.4s;
+        transform: translateX(-60%);
+    }
+    
+    #arrow-icon-two {
+        transition: 0.5s;
+        transform: translateX(-30%);
+    }
+    
+    .btn-content:hover #arrow-icon-three {
+        animation: color_anim 1s infinite 0.2s;
+    }
+    
+    .btn-content:hover #arrow-icon-one {
+        transform: translateX(0%);
+        animation: color_anim 1s infinite 0.6s;
+    }
+    
+    .btn-content:hover #arrow-icon-two {
+        transform: translateX(0%);
+        animation: color_anim 1s infinite 0.4s;
+    }
+    
+    /* SVG animations */
+    @keyframes color_anim {
+        0% {
+        fill: white;
+        }
+    
+        50% {
+        fill: var(--color-background);
+        }
+    
+        100% {
+        fill: #9ee5fa;
+        }
+    }
+    
+    /* Button animations */
+    @-webkit-keyframes btn-content {
+        0% {
+        outline: 0.2em solid var(--color-background);
+        outline-offset: 0;
+        }
+    }
+    
+    @keyframes btn-content {
+        0% {
+        outline: 0.2em solid var(--color-background);
+        outline-offset: 0;
+        }
+    }
+  
 
     .X {
         content: "";
@@ -1293,3 +1399,78 @@ footer {
     margin-right: 0.5rem;
     margin-left: 0.5rem
 }
+
+/* From Uiverse.io by xopc333 */ 
+.button {
+    display: block;
+    position: relative;
+    width: 56px;
+    height: 56px;
+    margin: 0;
+    overflow: hidden;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+    border: 0;
+  }
+  
+  .button:before,
+  .button:after {
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    inset: 7px;
+  }
+  
+  .button:before {
+    border: 4px solid #f0eeef;
+    transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+      transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+  }
+  
+  .button:after {
+    border: 4px solid #96daf0;
+    transform: scale(1.3);
+    transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
+      transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    opacity: 0;
+  }
+  
+  .button:hover:before,
+  .button:focus:before {
+    opacity: 0;
+    transform: scale(0.7);
+    transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
+      transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  }
+  
+  .button:hover:after,
+  .button:focus:after {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+      transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+  }
+  
+  .button-box {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  
+  .button-elem {
+    display: block;
+    width: 20px;
+    height: 20px;
+    margin: 17px 18px 0 18px;
+    transform: rotate(180deg);
+    fill: #f0eeef;
+  }
+  
+  .button:hover .button-box,
+  .button:focus .button-box {
+    transition: 0.4s;
+    transform: translateX(-56px);
+  }
+  
