--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -383,7 +383,7 @@ h4 {
             }
             .arrowRigth {
                 position: absolute;
-                margin-top: 7px;
+                margin-top: px;
                 cursor: pointer;
             }
 
