arreglo desigualdades de headers

--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -136,7 +136,11 @@ h4 {
         margin-left: 15%;
         justify-content: center;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
+
+        .lupa{
+            color: rgba(255, 255, 255, 0.65);
+        }
 
         .nav-div-input {
             width: 90%;
