--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -36,6 +36,11 @@
     font-family: var(--font-baloo);
 }
 
+a{
+    text-decoration: none;
+    color: var(--white);
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -132,8 +137,6 @@ h4 {
         border-radius: 30px;
         height: 40px;
         width: 28%;
-        margin-right: 20%;
-        margin-left: 15%;
         justify-content: center;
         display: flex;
         align-items: center;
@@ -266,7 +269,7 @@ h4 {
     }
 
     .conteiner-carruselPrimary {
-        padding-top: 25px;
+        margin-top: 0.8rem;
         height: 52%;
         margin-left: 1.55%;
         margin-right: 1.8%;
@@ -288,12 +291,10 @@ h4 {
         }
 
         .carrusel-primary {
-            margin-top: 0.5rem;
             display: flex;
             position: relative;
 
             .card-game::before {
-
                 width: 142px;
                 height: 33px;
                 position: absolute;
@@ -302,7 +303,23 @@ h4 {
                 color: var(--white);
                 border-top-left-radius: 8px;
                 border-bottom-right-radius: 8px;
-                bottom: 10px;
+                bottom: 9px;
+                padding-top: 5px;
+                right: 0px;
+                cursor: pointer;
+                background-color: var(--black-background-);
+            }
+
+            .cardPremium-game::before {
+                width: 142px;
+                height: 33px;
+                position: absolute;
+                content: "Agregar al carrito";
+                text-align: center;
+                color: var(--white);
+                border-top-left-radius: 8px;
+                border-bottom-right-radius: 8px;
+                bottom: 9px;
                 padding-top: 5px;
                 right: 0px;
                 cursor: pointer;
@@ -319,7 +336,7 @@ h4 {
                 .card-img-game {
                     cursor: pointer;
                     width: 400px;
-                    height: 220px;
+                    height: 240px;
                     object-fit: cover;
                     border-radius: 8px;
                 }
@@ -329,7 +346,8 @@ h4 {
             .cardGameSecundary {
                 width: 400px;
                 display: grid;
-                height: 230px;
+                height: 250px;
+                gap: 5px;
                 text-align: center;
                 grid-template-areas:
                     "a b"
@@ -353,7 +371,7 @@ h4 {
 
                 :is(.a, .b, .c, .d)::before {
                     content: "Jugar gratis";
-                    width: 70%;
+                    width: 73%;
                     text-align: center;
                     color: white;
                     position: absolute;
@@ -363,6 +381,9 @@ h4 {
                     bottom: 0;
                     border-top-left-radius: 8px;
                     border-bottom-right-radius: 8px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                 }
 
                 .cardSmall-game {
@@ -393,12 +414,10 @@ h4 {
 
             .arrowLeft{
                 position: absolute;
-                margin-top: 0px;
                 cursor: pointer;
             }
             .arrowRigth {
                 position: absolute;
-                margin-top: px;
                 cursor: pointer;
             }
 
@@ -407,6 +426,7 @@ h4 {
             }
 
             .arrowRigth {
+                margin-top: 5px;
                 right: 2%;
             }
 
@@ -453,6 +473,7 @@ h4 {
             left: 50%;
         }
 
+        
         .btn_ini_sesion {
             .btn {
                 padding: 2px;
@@ -1741,3 +1762,40 @@ textarea{
     transform: translateX(-56px);
   }
   
+/* --------------------------HEADER INICIADO SESION-------------------------- */
+  .header-right{
+    display: flex;
+    flex-direction: row;
+    width: 30%;
+    justify-content: space-evenly;
+    align-items: center;
+  } 
+
+  .userModal{
+    display: flex;
+    align-items: center;
+    color: var(--white);
+
+}
+
+.userModal span{
+    margin-left: 0.5rem;
+}
+
+.btn_ini_sesion{
+    margin-left: 20%;
+}
+
+.cart{
+    display: flex;
+    justify-content: center;
+}
+
+.logOutIcon{
+    display: flex;
+    justify-content: center;
+}
+
+.logOutIcon a{
+    margin-top: 8px;
+}
