--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -315,6 +315,7 @@ h4 {
                 height: 33px;
                 position: absolute;
                 content: "Agregar al carrito";
+                font-size: 16px;
                 text-align: center;
                 color: var(--white);
                 border-top-left-radius: 8px;
