agregar juego al carrito listo

--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -1800,3 +1800,13 @@ textarea{
 .logOutIcon a{
     margin-top: 8px;
 }
+
+.cart-cantItems{
+    color:var(--white);
+    margin-left: 1rem;
+    text-align: center;
+}
+
+.hidden{
+    display: none;
+}
