--- a/TP2/EntregaFinal/css/style.css
+++ b/TP2/EntregaFinal/css/style.css
@@ -135,7 +135,7 @@ h4 {
         border-radius: 30px;
         height: 40px;
         width: 28%;
-        margin-right: 16%;
+        margin-right: 17%;
         margin-left: 15%;
         justify-content: center;
         display: flex;
@@ -166,6 +166,45 @@ h4 {
             margin-top: 0.3rem;
         }
     }
+
+    .conteiner-lupa-loged {
+        border: 2px solid var(--gray);
+        color: white;
+        border-radius: 30px;
+        height: 40px;
+        width: 28%;
+        margin-right:7%;
+        margin-left: 15%;
+        justify-content: center;
+        display: flex;
+        align-items: center;
+
+        .lupa {
+            color: rgba(255, 255, 255, 0.65);
+        }
+
+        .nav-div-input {
+            width: 90%;
+            padding-left: 5%;
+        }
+
+        .nav-inputText {
+            width: 100%;
+            height: 1.8rem;
+            background-color: var(--black-background-);
+            border: none;
+            color: var(--white);
+        }
+
+        .nav-inputText:focus {
+            outline: none;
+        }
+
+        .nav-divLupa {
+            margin-top: 0.3rem;
+        }
+    }
+
 
     .btn {
         position: relative;
@@ -373,14 +412,17 @@ h4 {
                     height: 230px;
                     object-fit: fill;
                     border-radius: 8px;
+                                        
                 }
+                
+                
             }
 
             .cardPremium-game::before {
-                width: 142px;
+                width: 170px;
                 height: 33px;
                 position: absolute;
-                content: "Agregar al carrito";
+                content: "🛒 Agregar al carrito";
                 font-size: 16px;
                 text-align: center;
                 color: var(--white);
@@ -393,6 +435,23 @@ h4 {
                 background-color: var(--black-background-);
             }
 
+            .cardPremium-game::after {
+                width: 80px;
+                height: 33px;
+                position: absolute;
+                content: "💲 17.00"; /* El precio que desees mostrar */
+                font-size: 16px;
+                text-align: center;
+                color: var(--white);
+                border-top-right-radius: 8px;
+                border-bottom-left-radius: 8px;
+                top: 0.2px; /* Coloca el precio en la parte superior */
+                right: 0.2px;
+                padding-top: 5px;
+                background-color: var(--black-background-);
+                z-index: 1;
+            }
+
             .card-game {
                 position: relative;
                 margin-left: 4px;
@@ -400,17 +459,18 @@ h4 {
                 .card-img-game {
                     cursor: pointer;
                     width: 400px;
-                    height: 240px;
+                    height: 230px;
                     object-fit: fill;
                     border-radius: 8px;
+                    transition: opacity 0.3s ease;
                 }
             }
-
+            
 
             .cardGameSecundary {
                 width: 400px;
                 display: grid;
-                height: 240px;
+                height: 230px;
                 gap: 2px;
                 text-align: center;
                 grid-template-areas:
@@ -1747,7 +1807,7 @@ textarea {
     transform: translateY(3px);
 }
 
-.button-with-icon:hover .text {
+.button-with-icon:hover .text-jugar {
     transform: translateX(80px);
 }
 
@@ -1755,12 +1815,12 @@ textarea {
     transform: translate(23px);
 }
 
-.text {
+.text-jugar {
     transition: all 0.5s ease-in-out;
 }
 
 
-/* From Uiverse.io by xopc333 */
+/*btn salir*/
 .button {
     display: block;
     position: relative;
