logica 4 en linea avanzada, se puede jugar y se hizo refactor par jugar solo con columnas

--- a/TP3/EntregaFinal/css/style.css
+++ b/TP3/EntregaFinal/css/style.css
@@ -2021,6 +2021,7 @@ textarea {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    filter: blur(2px);
   }
 
   
